--- a/index.html
+++ b/index.html
@@ -53,7 +53,6 @@
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#services">Services</a></li>
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
-          <li><a href="blog.html">Blog</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -130,7 +129,7 @@
                 Quisquam vel ut sint cum eos hic dolores aperiam. Sed deserunt et. Inventore et et dolor consequatur itaque ut voluptate sed et. Magnam nam ipsum tenetur suscipit voluptatum nam et est corrupti.
               </p>
               <div class="text-center text-lg-start">
-                <a href="#" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
+                <a href="#!" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
                   <span>Read More</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
@@ -468,7 +467,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Nesciunt Mete</h3>
               <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis tempore et consequatur.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#!" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -477,7 +476,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Eosle Commodi</h3>
               <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#!" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -486,7 +485,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Ledo Markt</h3>
               <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#!" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -495,7 +494,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Asperiores Commodi</h3>
               <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#!" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -504,7 +503,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Velit Doloremque.</h3>
               <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#!" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -513,7 +512,7 @@
               <i class="ri-discuss-line icon"></i>
               <h3>Dolori Architecto</h3>
               <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
-              <a href="#" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
+              <a href="#!" class="read-more"><span>Read More</span> <i class="bi bi-arrow-right"></i></a>
             </div>
           </div>
 
@@ -547,7 +546,7 @@
                 <li class="na">Pharetra massa</li>
                 <li class="na">Massa ultricies mi</li>
               </ul>
-              <a href="#" class="btn-buy">Buy Now</a>
+              <a href="#!" class="btn-buy">Buy Now</a>
             </div>
           </div>
 
@@ -564,7 +563,7 @@
                 <li>Pharetra massa</li>
                 <li class="na">Massa ultricies mi</li>
               </ul>
-              <a href="#" class="btn-buy">Buy Now</a>
+              <a href="#!" class="btn-buy">Buy Now</a>
             </div>
           </div>
 
@@ -580,7 +579,7 @@
                 <li>Pharetra massa</li>
                 <li>Massa ultricies mi</li>
               </ul>
-              <a href="#" class="btn-buy">Buy Now</a>
+              <a href="#!" class="btn-buy">Buy Now</a>
             </div>
           </div>
 
@@ -596,7 +595,7 @@
                 <li>Pharetra massa</li>
                 <li>Massa ultricies mi</li>
               </ul>
-              <a href="#" class="btn-buy">Buy Now</a>
+              <a href="#!" class="btn-buy">Buy Now</a>
             </div>
           </div>
 
@@ -833,10 +832,10 @@
               <div class="member-img">
                 <img src="template/FlexStart/assets/img/team/team-1.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="#!"><i class="bi bi-twitter"></i></a>
+                  <a href="#!"><i class="bi bi-facebook"></i></a>
+                  <a href="#!"><i class="bi bi-instagram"></i></a>
+                  <a href="#!"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -852,10 +851,10 @@
               <div class="member-img">
                 <img src="template/FlexStart/assets/img/team/team-2.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="#!"><i class="bi bi-twitter"></i></a>
+                  <a href="#!"><i class="bi bi-facebook"></i></a>
+                  <a href="#!"><i class="bi bi-instagram"></i></a>
+                  <a href="#!"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -871,10 +870,10 @@
               <div class="member-img">
                 <img src="template/FlexStart/assets/img/team/team-3.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="#!"><i class="bi bi-twitter"></i></a>
+                  <a href="#!"><i class="bi bi-facebook"></i></a>
+                  <a href="#!"><i class="bi bi-instagram"></i></a>
+                  <a href="#!"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -890,10 +889,10 @@
               <div class="member-img">
                 <img src="template/FlexStart/assets/img/team/team-4.jpg" class="img-fluid" alt="">
                 <div class="social">
-                  <a href=""><i class="bi bi-twitter"></i></a>
-                  <a href=""><i class="bi bi-facebook"></i></a>
-                  <a href=""><i class="bi bi-instagram"></i></a>
-                  <a href=""><i class="bi bi-linkedin"></i></a>
+                  <a href="#!"><i class="bi bi-twitter"></i></a>
+                  <a href="#!"><i class="bi bi-facebook"></i></a>
+                  <a href="#!"><i class="bi bi-instagram"></i></a>
+                  <a href="#!"><i class="bi bi-linkedin"></i></a>
                 </div>
               </div>
               <div class="member-info">
@@ -1042,22 +1041,22 @@
           <div class="col-lg-2 col-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Home</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">About us</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Services</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Terms of service</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Privacy policy</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="index.html">Home</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#about">About us</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#services">Services</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#!">Terms of service</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#!">Privacy policy</a></li>
             </ul>
           </div>
 
           <div class="col-lg-2 col-6 footer-links">
             <h4>Our Services</h4>
             <ul>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#!">Web Design</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#!">Web Development</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#!">Product Management</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#!">Marketing</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#!">Graphic Design</a></li>
             </ul>
           </div>
 
