--- a/index.html
+++ b/index.html
@@ -70,7 +70,6 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li> -->
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
           <div class="medsos">
             <hr>
@@ -95,8 +94,8 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-6 d-flex flex-column justify-content-center">
-          <h1 data-aos="fade-up">We offer modern solutions for growing your business</h1>
-          <h2 data-aos="fade-up" data-aos-delay="400">We are team of talented designers making websites with Bootstrap</h2>
+          <h1 data-aos="fade-up">Tempat curhat bersahabat, agar mentalmu kuat</h1>
+          <h2 data-aos="fade-up" data-aos-delay="400">Dapatkan solusi lengkap untuk menjaga kesehatan mentalmu. Konseling dan meditasi online lebih mudah di mana dan kapan saja. Kamu juga bisa dapatkan hidup lebih bahagia dari sekarang.</h2>
           <div data-aos="fade-up" data-aos-delay="600">
             <div class="text-center text-lg-start">
               <a href="#about" class="btn-get-started scrollto d-inline-flex align-items-center justify-content-center align-self-center">
@@ -120,13 +119,20 @@
 
       <div class="container" data-aos="fade-up">
         <div class="row gx-0">
+          
+          <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
+            <img src="template/FlexStart/assets/img/about.jpg" class="img-fluid" alt="">
+          </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center" data-aos="fade-up" data-aos-delay="200">
             <div class="content">
               <h3>Who We Are</h3>
-              <h2>Expedita voluptas omnis cupiditate totam eveniet nobis sint iste. Dolores est repellat corrupti reprehenderit.</h2>
+              <h2>Aplikasi Meditasi Mudah untuk Kebutuhan Kesehatan Mental Kamu</h2>
               <p>
-                Quisquam vel ut sint cum eos hic dolores aperiam. Sed deserunt et. Inventore et et dolor consequatur itaque ut voluptate sed et. Magnam nam ipsum tenetur suscipit voluptatum nam et est corrupti.
+                Mental.in adalah layanan kesehatan mental berbasis teknologi. kamu dapat melakukan self-help dengan meditasi dan pengantar lelap serta konseling online dengan psikolog profesional langsung dari smartphone Anda. 
+              </p>
+              <p>
+                Kami yakin bahwa layanan kesehatan mental seharusnya dapat dijangkau siapapun, kapanpun, dan dimanapun tanpa kendala mobilitas.
               </p>
               <div class="text-center text-lg-start">
                 <a href="#!" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
@@ -137,9 +143,7 @@
             </div>
           </div>
 
-          <div class="col-lg-6 d-flex align-items-center" data-aos="zoom-out" data-aos-delay="200">
-            <img src="template/FlexStart/assets/img/about.jpg" class="img-fluid" alt="">
-          </div>
+          
 
         </div>
       </div>
@@ -622,12 +626,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
-                    Non consectetur a erat nam at lectus urna duis?
+                    Apa itu Mental.in ?
                   </button>
                 </h2>
                 <div id="faq-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    Feugiat pretium nibh ipsum consequat. Tempus iaculis urna id volutpat lacus laoreet non curabitur gravida. Venenatis lectus magna fringilla urna porttitor rhoncus dolor purus non.
+                    Mental.in adalah layanan kesehatan mental berbasis teknologi. kalian dapat melakukan self-help dengan meditasi dan pengantar lelap serta konseling online dengan psikolog profesional langsung dari smartphone Anda. Kami yakin bahwa layanan kesehatan mental seharusnya dapat dijangkau siapapun, kapanpun, dan dimanapun tanpa kendala mobilitas.
                   </div>
                 </div>
               </div>
@@ -635,12 +639,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-2">
-                    Feugiat scelerisque varius morbi enim nunc faucibus a pellentesque?
+                    Bagaimana saya bisa menghubungi Mental.in?
                   </button>
                 </h2>
                 <div id="faq-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    Untuk terhubung dengan Admin mental.in Anda bisa menghubungi kami melalui line@ (@mental.in) atau mentalinn03@gmail.com 
                   </div>
                 </div>
               </div>
@@ -648,12 +652,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-3">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi?
+                    Saya tidak tinggal di Indonesia, Apakah saya bisa menggunakan layanan Mental.in?
                   </button>
                 </h2>
                 <div id="faq-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist1">
                   <div class="accordion-body">
-                    Eleifend mi in nulla posuere sollicitudin aliquam ultrices sagittis orci. Faucibus pulvinar elementum integer enim. Sem nulla pharetra diam sit amet nisl suscipit. Rutrum tellus pellentesque eu tincidunt. Lectus urna duis convallis convallis tellus. Urna molestie at elementum eu facilisis sed odio morbi quis
+                    Ya, tentu saja! Karena layanan bersifat online, Anda dapat mengakses Mental.in dimana pun Anda berada.
                   </div>
                 </div>
               </div>
@@ -669,12 +673,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2-content-1">
-                    Ac odio tempor orci dapibus. Aliquam eleifend mi in nulla?
+                    Apakah Mental.in tepat untuk saya?
                   </button>
                 </h2>
                 <div id="faq2-content-1" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
                   <div class="accordion-body">
-                    Dolor sit amet consectetur adipiscing elit pellentesque habitant morbi. Id interdum velit laoreet id donec ultrices. Fringilla phasellus faucibus scelerisque eleifend donec pretium. Est pellentesque elit ullamcorper dignissim. Mauris ultrices eros in cursus turpis massa tincidunt dui.
+                    Di tengah kesibukan Anda, tentu saja Mental.in adalah pilihan terbaik! Anda tidak perlu keluar rumah untuk menggunakan Mental.in. Selama Anda memiliki koneksi internet, Anda dapat mengakses Mental.in di mana saja. Kami selalu berupaya menghadirkan solusi terbaik sesuai kebutuhan Anda.
                   </div>
                 </div>
               </div>
@@ -682,12 +686,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2-content-2">
-                    Tempus quam pellentesque nec nam aliquam sem et tortor consequat?
+                    Berapa harga layanan Mental.in?
                   </button>
                 </h2>
                 <div id="faq2-content-2" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
                   <div class="accordion-body">
-                    Molestie a iaculis at erat pellentesque adipiscing commodo. Dignissim suspendisse in est ante in. Nunc vel risus commodo viverra maecenas accumsan. Sit amet nisl suscipit adipiscing bibendum est. Purus gravida quis blandit turpis cursus in
+                    Kabar baiknya, kami memiliki berbagai macam paket dengan selisih harga hingga 3x lebih murah dibanding layanan tatap muka.
                   </div>
                 </div>
               </div>
@@ -695,12 +699,12 @@
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq2-content-3">
-                    Varius vel pharetra vel turpis nunc eget lorem dolor?
+                    Bagaimana saya bisa membayar?
                   </button>
                 </h2>
                 <div id="faq2-content-3" class="accordion-collapse collapse" data-bs-parent="#faqlist2">
                   <div class="accordion-body">
-                    Laoreet sit amet cursus sit amet dictum sit amet justo. Mauris vitae ultricies leo integer malesuada nunc vel. Tincidunt eget nullam non nisi est sit amet. Turpis nunc eget lorem dolor sed. Ut venenatis tellus in metus vulputate eu scelerisque. Pellentesque diam volutpat commodo sed egestas egestas fringilla phasellus faucibus. Nibh tellus molestie nunc non blandit massa enim nec.
+                    Anda bisa melakukan pembayaran melalui transfer Bank, atau Go-Pay. Rekening tujuan akan ditampilkan ketika pembelian sudah diproses hingga pembayaran.
                   </div>
                 </div>
               </div>
@@ -936,86 +940,6 @@
 
     </section><!-- End Clients Section -->
 
-    <!-- ======= Contact Section ======= -->
-    <section id="contact" class="contact text-center">
-
-      <div class="container" data-aos="fade-up">
-
-        <header class="section-header">
-          <h2>Contact</h2>
-          <p>Contact Us</p>
-        </header>
-
-        <div class="row gy-4 ">
-
-          <div class="col-lg-3">
-          </div>
-          <div class="col-lg-6">
-
-            <div class="row gy-4 d-flex justify-content-center">
-              <div class="col-md-6">
-                <div class="info-box">
-                  <i class="bi bi-telephone"></i>
-                  <h3>Call Us</h3>
-                  <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box">
-                  <i class="bi bi-envelope"></i>
-                  <h3>Email Us</h3>
-                  <p>info@example.com<br>contact@example.com</p>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="info-box">
-                  <i class="bi bi-clock"></i>
-                  <h3>Open Hours</h3>
-                  <p>Monday - Friday<br>9:00AM - 05:00PM</p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-          <!-- 
-          <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form">
-              <div class="row gy-4">
-
-                <div class="col-md-6">
-                  <input type="text" name="name" class="form-control" placeholder="Your Name" required>
-                </div>
-
-                <div class="col-md-6 ">
-                  <input type="email" class="form-control" name="email" placeholder="Your Email" required>
-                </div>
-
-                <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required>
-                </div>
-
-                <div class="col-md-12">
-                  <textarea class="form-control" name="message" rows="6" placeholder="Message" required></textarea>
-                </div>
-
-                <div class="col-md-12 text-center">
-                  <div class="loading">Loading</div>
-                  <div class="error-message"></div>
-                  <div class="sent-message">Your message has been sent. Thank you!</div>
-
-                  <button type="submit">Send Message</button>
-                </div>
-
-              </div>
-            </form>
-
-          </div> -->
-
-        </div>
-
-      </div>
-
-    </section><!-- End Contact Section -->
 
   </main><!-- End #main -->
 
