--- a/index.html
+++ b/index.html
@@ -201,9 +201,74 @@
 
     </section><!-- End About Section -->
 
-    <h3 class="d-flex align-content-center">meditasi testimoni</h3>
+    <section id="testimoni-meditasi" class="testimoni1">
+      <div class="container" data-aos="fade-up">
+        <header class="section-testi-m">
+          <h3 class="d-flex justify-content-center">Testimoni Meditasi </h3>
+          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
 
-        <!-- ======= Meditasi Section ======= -->
+            <div class="carousel-inner swiper">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col-sm-2">
+                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
+                  </div>
+                  <div class="col-sm isi">
+                    <h5>Wow keren</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
+                    <h6>Udin</h6>
+                    <p>Pengusaha</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm-2">
+                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
+                  </div>
+                  <div class="col-sm isi">
+                    <h5>Wow keren</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
+                    <h6>Udin</h6>
+                    <p>Pengusaha</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm-2">
+                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
+                  </div>
+                  <div class="col-sm isi">
+                    <h5>Wow keren</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
+                    <h6>Udin</h6>
+                    <p>Pengusaha</p>
+                  </div>
+                </div>
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </header>
+      </div>
+    </section>
+
+    <!-- ======= Meditasi Section ======= -->
     <section id="konseling" class="about">
 
       <div class="container" data-aos="fade-up">
@@ -239,7 +304,72 @@
 
     </section><!-- End About Section -->
 
-    <h3 class="d-flex align-content-center">konseling testimoni</h3>
+    <section id="testimoni-meditasi" class="testimoni1">
+      <div class="container" data-aos="fade-up">
+        <header class="section-testi-m">
+          <h3 class="d-flex justify-content-center">Testimoni Konsultasi </h3>
+          <div id="carouselKonsultasi" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselKonsultasi" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselKonsultasi" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselKonsultasi" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+
+            <div class="carousel-inner swiper">
+              <div class="carousel-item active">
+                <div class="row">
+                  <div class="col-sm-2">
+                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
+                  </div>
+                  <div class="col-sm isi">
+                    <h5>Wow keren</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
+                    <h6>Udin</h6>
+                    <p>Pengusaha</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm-2">
+                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
+                  </div>
+                  <div class="col-sm isi">
+                    <h5>Wow keren</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
+                    <h6>Udin</h6>
+                    <p>Pengusaha</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="carousel-item">
+                <div class="row">
+                  <div class="col-sm-2">
+                    <img class="img-fluid img-circle" src="/template/FlexStart/assets/img/testimonials/orang1.webp" alt="">
+                  </div>
+                  <div class="col-sm isi">
+                    <h5>Wow keren</h5>
+                    <p>"Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem soluta, consequatur delectus iste voluptatem architecto alias doloremque cumque illum, necessitatibus quis, excepturi repellat quas officia molestiae sequi explicabo repudiandae quos."</p>
+                    <h6>Udin</h6>
+                    <p>Pengusaha</p>
+                  </div>
+                </div>
+            </div>
+
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselKonsultasi" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselKonsultasi" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </header>
+      </div>
+    </section>
 
     <!-- ======= Values Section ======= -->
     <section id="values" class="values">
@@ -498,10 +628,10 @@
                     <div class="member-img">
                       <img src="template/FlexStart/assets/img/team/gunawan2.png" width="250" class="img-fluid" alt="">
                       <div class="social">
-                        <a href="#!"><i class="bi bi-twitter"></i></a>
-                        <a href="#!"><i class="bi bi-facebook"></i></a>
-                        <a href="#!"><i class="bi bi-instagram"></i></a>
-                        <a href="#!"><i class="bi bi-linkedin"></i></a>
+                        <a target="_blank" href="https://twitter.com/ilahgun"><i class="bi bi-twitter"></i></a>
+                        <a target="_blank" href="https://facebook.com/profile.php?id=100007645154935&_rdc=1&_rdr"><i class="bi bi-facebook"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/ilahgun/"><i class="bi bi-instagram"></i></a>
+                        <a target="_blank" href="http://www.linkedin.com/in/gunawan-66118a229"><i class="bi bi-linkedin"></i></a>
                       </div>
                     </div>
                     <div class="member-info">
@@ -538,17 +668,17 @@
               <div class="testimonial-item">
                   <div class="member">
                     <div class="member-img">
-                      <img src="https://dummyimage.com/250x250/53455/erty" class="img-fluid" alt="">
+                      <img src="template/FlexStart/assets/img/team/mail.jpg" class="img-fluid" alt="">
                       <div class="social">
                         <a href="#!"><i class="bi bi-twitter"></i></a>
-                        <a href="#!"><i class="bi bi-facebook"></i></a>
-                        <a href="#!"><i class="bi bi-instagram"></i></a>
-                        <a href="#!"><i class="bi bi-linkedin"></i></a>
+                        <a target="_blank" href="https://facebook.com/ismailhere.7"><i class="bi bi-facebook"></i></a>
+                        <a target="_blank" href="#!"><i class="bi bi-instagram"></i></a>
+                        <a target="_blank" href="https://www.linkedin.com/in/7muh-ismail/"><i class="bi bi-linkedin"></i></a>
                       </div>
                     </div>
                     <div class="member-info">
                       <h4>Muhammad Ismail</h4>
-                      <span>Chief Executive Officer</span>
+                      <span>sebagai ismail</span>
                       <p></p>
                     </div>
                   </div>
@@ -672,79 +802,6 @@
 
     </section><!-- End F.A.Q Section -->
 
-    <!-- ======= Team Section ======= -->
-    <section id="team" class="team">
-
-      <div class="container" data-aos="fade-up">
-
-        <header class="section-header">
-          <h2>Team</h2>
-          <p>Our hard working team</p>
-        </header>
-
-        <div class="row gy-4">
-
-          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner bg-primary">
-              <div class="carousel-item active">
-                <div class="container">
-                  <p>test1</p>  
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="container">
-                  <p>test1</p>  
-                </div>
-              </div>
-              <div class="carousel-item">
-                <div class="container">
-                  <p>test1</p>  
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Next</span>
-            </button>
-          </div>
-
-          <!-- <div class="col-lg-3 col-md-6 d-flex align-items-stretch" data-aos="fade-up" data-aos-delay="200">
-            <div class="member">
-              <div class="member-img">
-                <img src="template/FlexStart/assets/img/team/team-2.jpg" class="img-fluid" alt="">
-                <div class="social">
-                  <a href="#!"><i class="bi bi-twitter"></i></a>
-                  <a href="#!"><i class="bi bi-facebook"></i></a>
-                  <a href="#!"><i class="bi bi-instagram"></i></a>
-                  <a href="#!"><i class="bi bi-linkedin"></i></a>
-                </div>
-              </div>
-              <div class="member-info">
-                <h4>Sarah Jhonson</h4>
-                <span>Product Manager</span>
-                <p>Quo esse repellendus quia id. Est eum et accusantium pariatur fugit nihil minima suscipit corporis. Voluptate sed quas reiciendis animi neque sapiente.</p>
-              </div>
-            </div>
-          </div> -->
-
-        </div>
-
-      </div>
-
-    </section><!-- End Team Section -->
-
-
-  </main><!-- End #main -->
-
   <!-- ======= Footer ======= -->
   <footer id="footer" class="footer">
 
@@ -789,8 +846,8 @@
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
             <p>
-              <strong>Phone:</strong> +62 5589 55488 55<br>
-              <strong>Email:</strong> mentalinn03@gmail.com<br>
+              <strong>Whatsapp:</strong> <a href="https://api.whatsapp.com/send/?phone=6281385504878&text&app_absent=0" target="_blank">+62 813 8550 4878</a><br>
+              <strong>Email:</strong> <a href="mailto:mentalinn03@gmail.com" target="_blank">mentalinn03@gmail.com</a> <br>
             </p>
 
           </div>
