--- a/index.html
+++ b/index.html
@@ -443,7 +443,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <img src="/template/FlexStart/assets/img/icon/world.png" width="50" class="img-fluid" alt="">
+              <img src="/template/FlexStart/assets/img/icon/world.png" width="70" class="img-fluid" alt="">
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="48 " data-purecounter-duration="1" class="purecounter"></span>
                 <p>Negara Asia</p>
@@ -453,7 +453,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <img src="/template/FlexStart/assets/img/icon/remaja.png" width="60" class="img-fluid" alt="">
+              <img src="/template/FlexStart/assets/img/icon/remaja.png" width="70" class="img-fluid" alt="">
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Remaja</p>
@@ -463,7 +463,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <img src="/template/FlexStart/assets/img/icon/dewasa.png" width="60" class="img-fluid" alt="">
+              <img src="/template/FlexStart/assets/img/icon/dewasa.png" width="70" class="img-fluid" alt="">
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
                 <p>Dewasa</p>
@@ -473,7 +473,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <img src="/template/FlexStart/assets/img/icon/teman-ceritamu.jpg" width="80" class="img-fluid" alt="">
+              <img src="/template/FlexStart/assets/img/icon/teman-ceritamu.jpg" width="100" class="img-fluid" alt="">
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
                 <p>#TemanCeritamu</p>
@@ -607,17 +607,17 @@
               <div class="testimonial-item">
                   <div class="member">
                     <div class="member-img">
-                      <img src="template/FlexStart/assets/img/team/arni-test.jpg" class="img-fluid" alt="">
+                      <img src="template/FlexStart/assets/img/team/arni-test.png" class="img-fluid" alt="">
                       <div class="social">
-                        <a target="_blank" href="#!"><i class="bi bi-twitter"></i></a>
-                        <a target="_blank" href="#!"><i class="bi bi-facebook"></i></a>
-                        <a target="_blank" href="#!"><i class="bi bi-instagram"></i></a>
-                        <a target="_blank" href="#!"><i class="bi bi-linkedin"></i></a>
+                        <a href="#!"><i class="bi bi-twitter"></i></a>
+                        <a href="#!"><i class="bi bi-facebook"></i></a>
+                        <a target="_blank" href="https://www.instagram.com/arni.rhyu/ "><i class="bi bi-instagram"></i></a>
+                        <a href="#!"><i class="bi bi-linkedin"></i></a>
                       </div>
                     </div>
                     <div class="member-info">
                       <h4>Arni Rahayu Suryani</h4>
-                      <span>Chief Executive Officer</span>
+                      <span>Design</span>
                       <p></p>
                     </div>
                   </div>
@@ -631,14 +631,14 @@
                       <img src="/template/FlexStart/assets/img/team/chika.png" class="img-fluid" alt="">
                       <div class="social">
                         <a target="_blank" href="https://twitter.com/b0bacutes?t=GF5_MAVPYCK5FOVHZX66Cw&s=08"><i class="bi bi-twitter"></i></a>
-                        <a target="_blank" href="#!"><i class="bi bi-facebook"></i></a>
+                        <a href="#!"><i class="bi bi-facebook"></i></a>
                         <a target="_blank" href="https://www.instagram.com/chika.aul/"><i class="bi bi-instagram"></i></a>
                         <a target="_blank" href="www.linkedin.com/in/chika-aulia-zahwa-b8ba96227"><i class="bi bi-linkedin"></i></a>
                       </div>
                     </div>
                     <div class="member-info">
                       <h4>Chika Aulia Zahwa</h4>
-                      <span>Chief Executive Officer</span>
+                      <span>Design</span>
                       <p></p>
                     </div>
                   </div>
@@ -659,7 +659,7 @@
                     </div>
                     <div class="member-info">
                       <h4>Gunawan</h4>
-                      <span>Chief Executive Officer</span>
+                      <span>Developer</span>
                       <p></p>
                     </div>
                   </div>
@@ -672,9 +672,9 @@
                     <div class="member-img">
                       <img src="/template/FlexStart/assets/img/team/alip.png" class="img-fluid" alt="">
                       <div class="social">
-                        <a target="_blank" href="#!"><i class="bi bi-twitter"></i></a>
-                        <a target="_blank" href="#!"><i class="bi bi-facebook"></i></a>
-                        <a target="_blank" href="#!"><i class="bi bi-instagram"></i></a>
+                        <a href="#!"><i class="bi bi-twitter"></i></a>
+                        <a href="#!"><i class="bi bi-facebook"></i></a>
+                        <a href="#!"><i class="bi bi-instagram"></i></a>
                         <a target="_blank" href="#!"><i class="bi bi-linkedin"></i></a>
                       </div>
                     </div>
@@ -691,17 +691,17 @@
               <div class="testimonial-item">
                   <div class="member">
                     <div class="member-img">
-                      <img src="template/FlexStart/assets/img/team/mail.jpg" class="img-fluid" alt="">
+                      <img src="template/FlexStart/assets/img/team/mail.png" class="img-fluid" alt="">
                       <div class="social">
-                        <a  href="#!"><i class="bi bi-twitter"></i></a>
+                        <a href="#!"><i class="bi bi-twitter"></i></a>
                         <a target="_blank" href="https://facebook.com/ismailhere.7"><i class="bi bi-facebook"></i></a>
-                        <a target="_blank" href="#!"><i class="bi bi-instagram"></i></a>
+                        <a href="#!"><i class="bi bi-instagram"></i></a>
                         <a target="_blank" href="https://www.linkedin.com/in/7muh-ismail/"><i class="bi bi-linkedin"></i></a>
                       </div>
                     </div>
                     <div class="member-info">
                       <h4>Muhammad Ismail</h4>
-                      <span>sebagai ismail</span>
+                      <span>Developer</span>
                       <p></p>
                     </div>
                   </div>
@@ -888,7 +888,7 @@
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flexstart-bootstrap-startup-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> & <a href="#!">KWU Teams</a> | Made by <a href="#!">KWU Teams</a> with <i class="bi bi-heart-fill text-danger"></i>
+        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> & <a href="#!">Mentalin.in</a> | Made by <a href="#!">Mentalin.in</a> with <i class="bi bi-heart-fill text-danger"></i>
       </div>
     </div>
   </footer><!-- End Footer -->
