--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
     <section id="testimoni-meditasi" class="testimoni1">
       <div class="container" data-aos="fade-up">
         <header class="section-testi-m">
-          <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselExampleIndicators" data-bs-interval="false" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -308,7 +308,7 @@
     <section id="testimoni-meditasi" class="testimoni1">
       <div class="container" data-aos="fade-up">
         <header class="section-testi-m">
-          <div id="carouselKonsultasi" class="carousel slide" data-bs-ride="carousel">
+          <div id="carouselKonsultasi" data-bs-interval="false" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#carouselKonsultasi" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
               <button type="button" data-bs-target="#carouselKonsultasi" data-bs-slide-to="1" aria-label="Slide 2"></button>
