--- a/index.html
+++ b/index.html
@@ -79,6 +79,10 @@
               <a href="https://www.instagram.com/mental.inn/" class="medsos-style"><i class="bi bi-instagram"></i></a>
               <a href="https://www.tiktok.com/@mental.inn?fbclid=IwAR1MBTeqD4ExNY3sIAcqeaP30PCbYjCgAVcqi0aHOfTxC7Zl7Uxi5HhvJYY" style="margin-left: -20px;" class="medsos-style"><i class="bi bi-tiktok"></i></a>
             </div>  
+            <div class="d-flex justify-content-center">
+              <img src="template/FlexStart/assets/img/meditasi.png" width="300px" class="img-fluid" alt="">
+            </div>
+            
           </div>
           
         </ul>
