--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
               </p>
               <div class="text-center text-lg-start">
                 <a href="#!" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
-                  <span>Meditasi Online Sekarang</span>
+                  <span>Meditasi Sekarang</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -295,7 +295,7 @@
               </p>
               <div class="text-center text-lg-start">
                 <a href="#!" class="btn-read-more d-inline-flex align-items-center justify-content-center align-self-center">
-                  <span>Konseling Online Sekarang</span>
+                  <span>Konseling Sekarang</span>
                   <i class="bi bi-arrow-right"></i>
                 </a>
               </div>
@@ -477,7 +477,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
-              <img src="/template/FlexStart/assets/img/icon/teman-ceritamu.jpg" width="100" class="img-fluid" alt="">
+              <img src="/template/FlexStart/assets/img/icon/teman-ceritamu.png" width="70" class="img-fluid" alt="">
               <div>
                 <span data-purecounter-start="0" data-purecounter-end="0" data-purecounter-duration="1" class="purecounter"></span>
                 <p>#TemanCeritamu</p>
